--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.mohamedsaeed.covid_19tracker"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 16
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,6 +21,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    buildFeatures {
+        viewBinding true
+        //noinspection DataBindingWithoutKapt
+        dataBinding true
     }
 }
 
@@ -36,15 +43,28 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     //Card View
     implementation "androidx.cardview:cardview:1.0.0"
+    //don't update it to 2.7.0, or update it and the device should be API 21 and greater
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.7.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     //GSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     //Progressbar Animation
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     //SDP
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Lifecycle components
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //RXJava Dependency
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+    //RXAndroid Dependency
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    //Call to Observable adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
 
-
+}
+repositories {
+    mavenCentral()
 }
